Fix margin collapsing

--- a/extra/website/style.css
+++ b/extra/website/style.css
@@ -32,7 +32,7 @@
 
 body {
   margin: auto;
-  padding: 0 0.5rem;
+  padding: 0.5rem;
   max-width: 800px;
   background-color: var(--background-color);
   color: var(--foreground-color);
@@ -65,6 +65,10 @@ main figure:nth-of-type(3) figcaption {
 header {
   display: flex;
   justify-content: space-between;
+}
+
+header h1 {
+  margin: 0;
 }
 
 nav {
